# zoom-earth-downloader

./: .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai/: 1.prompt.md  2.prompt.md
nginx/: cors.conf  nginx.conf
src/: main.py
